--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install",
     "typecheck": "tsc",
     "test": "npm run eslint && npm run stylelint && npm run prettycheck && npm run typecheck",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s public -p 6006",
     "build-next": "next build",
     "build-storybook": "build-storybook -s public",
     "build-server": "tsc --project tsconfig.server.json"
