--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.5"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
